--- a/config.example.yaml
+++ b/config.example.yaml
@@ -2,9 +2,12 @@ telegram:
   bot_token: "YOUR_TELEGRAM_BOT_TOKEN"
 
 llm:
-  # provider 可选: openai / anthropic / gemini
+  # provider 可选: openai / openai-response / anthropic / gemini
   provider: "openai"
-  # 对于 openai/provider 兼容服务，可通过 base_url 自定义地址
+  # 对于 openai/openai-response/anthropic/gemini 兼容服务，可通过 base_url 自定义地址
+  # - openai/openai-response: 默认为 https://api.openai.com（未配置时）
+  # - anthropic: 需按兼容服务要求配置，例如 https://api.anthropic.com
+  # - gemini: 部分兼容服务通过自定义 api_endpoint 提供
   base_url: "https://api.openai.com"
   api_key: "YOUR_LLM_API_KEY"
   model: "gpt-4.1-mini"
