🐳 chore: 迁移到uv 增加ruff

--- a/.gitignore
+++ b/.gitignore
@@ -216,7 +216,7 @@ __marimo__/
 .streamlit/secrets.toml
 
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
