🔧 chore(docker): 启用 xvfb 命令并配置 shm_size
- 取消注释 xvfb-run 命令，支持容器内有头浏览器模式
- 添加 shm_size: 512m 配置，避免 Chromium 共享内存不足导致崩溃

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,9 @@ services:
     build: .
     restart: unless-stopped
     container_name: websum-to-git
+    shm_size: 512m
     environment:
       - TZ=Asia/Shanghai
     volumes:
       - ./config.yaml:/app/config.yaml:ro
-    # command: ["xvfb-run", "-a", "python", "main.py", "--config", "/app/config.yaml"]
+    command: ["xvfb-run", "-a", "python", "main.py", "--config", "/app/config.yaml"]
