✨ feat: 实现 Telegram Bot 任务队列与并发控制
- 新增 task_queue.py：in-memory 任务调度器，支持全局并发限制与单会话队列上限
- 重构 bot.py：所有 URL 处理和截图任务改为入队异步执行，新增 /status 查看队列状态
- 扩展 config.py：新增 max_concurrent_jobs/max_queue_size/max_queue_size_per_chat 配置项
- 优化 camoufox_helper.py & screenshot.py：检测运行中的事件循环，自动隔离到新线程执行 Playwright
- 同步文档：README/quickstart/development.md 说明队列特性与新配置

BREAKING CHANGE: 无（配置项有默认值，行为兼容）

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,5 +1,11 @@
 telegram:
   bot_token: "YOUR_TELEGRAM_BOT_TOKEN"
+  # 同时运行的任务数上限（吞吐优先建议 2；资源紧张可设 1）
+  max_concurrent_jobs: 2
+  # 全局等待队列上限（不含正在运行中的任务）
+  max_queue_size: 50
+  # 单个会话的等待队列上限（防止刷屏/误触）
+  max_queue_size_per_chat: 10
 
 llm:
   # provider 可选: openai / openai-response / anthropic / gemini
